# transcriptor-video-audio

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  TESTING_PLAN.md  TODO.md  UI_UX_IMPROVEMENTS_SUMMARY.md  pyproject.toml  requirements.txt  run_tests.sh  transcriptor.iss  transcriptor.spec
.github/workflows/: ci-cd.yml
src/transcriptor/: main.py  pipeline.py
src/transcriptor/audio/: __init__.py  player.py  preprocessor.py  vad.py
src/transcriptor/pipeline/: __init__.py  streaming.py
src/transcriptor/transcription/: __init__.py  aligner.py  diarizer.py  faster_whisper.py  onnx_backend.py
src/transcriptor/ui/: __init__.py  editor.py  fluent_design.py  main_window.py  main_window.py.bak  settings_dialog.py  tour.py  waveform_widget.py  windows_effects.py
src/transcriptor/utils/: __init__.py  config.py  performance.py
tests/: test_basic.py  test_editor.py  test_onnx_backend.py  test_performance.py  test_pipeline.py  test_ui_improvements.py
